--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,11 +18,11 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v3
 
-      - name: Build with Gradle
-        run: ./gradlew assembleDebug
+      - name: Build Debug APK
+        run: gradle :app:assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v3
